[gd_scene load_steps=13 format=3 uid="uid://k313cue1elx3"]

[ext_resource type="Script" path="res://scripts/nuclear_lever.gd" id="1_vg1tw"]
[ext_resource type="Texture2D" uid="uid://bsiqqpj48aj1j" path="res://assets/A.png" id="2_xaa14"]
[ext_resource type="Texture2D" uid="uid://c7tl8ta5scb41" path="res://assets/D.png" id="3_slvrl"]
[ext_resource type="Texture2D" uid="uid://2qy18lrnk6fs" path="res://assets/L.png" id="4_h3rgh"]
[ext_resource type="Texture2D" uid="uid://cc07hyvwd1mfi" path="res://assets/R.png" id="5_6auth"]
[ext_resource type="Texture2D" uid="uid://csb06nv0c3bc3" path="res://icon.svg" id="6_7sk62"]
[ext_resource type="Texture2D" uid="uid://ocaeimktot6p" path="res://assets/lever_sprite.png" id="7_3vlg6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kwgln"]
size = Vector2(60, 119)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7py5"]
atlas = ExtResource("7_3vlg6")
region = Rect2(0, 0, 78, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ogxn"]
atlas = ExtResource("7_3vlg6")
region = Rect2(78, 0, 78, 122)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqx47"]
atlas = ExtResource("7_3vlg6")
region = Rect2(156, 0, 78, 122)

[sub_resource type="SpriteFrames" id="SpriteFrames_la4n3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7py5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ogxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqx47")
}],
"loop": false,
"name": &"down",
"speed": 5.0
}]

[node name="nuclear_lever" type="Node2D"]
script = ExtResource("1_vg1tw")

[node name="kiri1" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -186.5)
texture = ExtResource("2_xaa14")

[node name="kanan1" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -186.5)
texture = ExtResource("3_slvrl")

[node name="kiri2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -186.5)
texture = ExtResource("4_h3rgh")

[node name="kanan2" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -186.5)
texture = ExtResource("5_6auth")

[node name="alert" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -186.5)
texture = ExtResource("6_7sk62")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -49.5)
shape = SubResource("RectangleShape2D_kwgln")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -47.0
offset_top = -241.0
offset_right = 48.0
offset_bottom = -147.0
alignment = 1

[node name="p1_control" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/p1_control"]
layout_mode = 2
texture = ExtResource("2_xaa14")

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/p1_control"]
layout_mode = 2
texture = ExtResource("3_slvrl")

[node name="p2_control" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/p2_control"]
layout_mode = 2
texture = ExtResource("4_h3rgh")

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/p2_control"]
layout_mode = 2
texture = ExtResource("5_6auth")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -91)
sprite_frames = SubResource("SpriteFrames_la4n3")
animation = &"down"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
